<resources>
    <string name="app_name">Quiero Tortillas</string>
    <string name="app_icon_description">Tortillas Icon</string>
    <string name="facebook_app_id"></string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or register to get access.</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">Sign in</string>
    <string name="btn_link_to_register">Not a member? Register here!</string>
    <string name="gmail_login">Sign in</string>
    <string name="facebook_login">Login with facebook</string>

    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Please enter your accounts email address below and click the reset password button to receive a reset password email.</string>

    <string name="web_client_id">269028494679-a06mh94qbqt3qvborhnu3nc7rfem1uo5.apps.googleusercontent.com</string>
    <string name="service_not_available">The service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude, longitude used.</string>
    <string name="no_address_found">We could not find an address with that last saved location</string>
    <string name="fetchingJokesMessage">Sending tortillas request</string>
    <string name="lbl_register_here">| Register here.</string>
    <string name="lbl_more_tortillas">+</string>
    <string name="lbl_less_tortillas">-</string>
    <string name="lbl_new_client">New Client</string>
    <string name="welcome_message">Welcome %s</string>
    <string name="delivery_message">Delivering to %s</string>
    <string name="tortillas_amount_format">%d kg</string>
    <string name="name">Name</string>
    <string name="duplicate_user">Email already register to an user.</string>
    <string name="btn_done">Done</string>
    <string name="lbl_order_send" formatted="false">We are processing your tortillas order for %d kg which will be delivery to %s.</string>
    <string name="lbl_order_confirmation_title">Thank you for using La Buena!</string>
    <string name="btn_new_request">New order</string>
    <string name="confirm_order_message">Do you want to send an order for %d kg?</string>
    <string name="email_address_required">Enter email address!</string>
    <string name="password_required">Enter password!</string>
    <string name="reset_password_email_sent">An email has been sent to %s with the instructions to reset the password</string>
    <string name="error_resetting_password">Error trying to send reset password email</string>
    <string name="user_name_required">Enter user name</string>
    <string name="order_notitication">Congratulations your order is coming</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="facebook_sign_in">Facebook Sign In</string>
    <string name="more_tortillas_description">Increase tortillas amount</string>
    <string name="less_tortillas_description">Decrease tortillas amount</string>
    <string name="request_tortillas_description">Request tortillas</string>
    <string name="invalid_email">Enter a valid email</string>
    <string name="invalid_password">Enter a valid password</string>
</resources>
